--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -12,7 +12,8 @@
     font-size: 10px;
     text-align: center;
 
-    .vote, .answer {
+    .vote,
+    .answer {
         width: 60px;
         height: 60px;
     }
@@ -26,16 +27,63 @@
         &.unanswered {
             border: none;
         }
-        &.answered{
+
+        &.answered {
             border: 1px solid $color-green;
             color: $color-green;
         }
+
         &.answered-accepted {
             background: $color-green;
             color: $color-white;
         }
     }
+
     .view {
         margin-top: 10px;
+    }
+
+}
+
+.vote-controls {
+    min-width: 60px;
+    margin-right: 30px;
+    text-align: center;
+    color: $gray-700;
+
+    span,
+    a {
+        display: block;
+    }
+
+    span {
+        &.votes-count {
+            font-size: 25px;
+        }
+
+        &.favorites-count {
+            font-size: 12px;
+        }
+    }
+
+    a {
+        cursor: pointer;
+        color: $gray-600;
+
+        &.off,
+        &.off:hover {
+            color: $gray-500;
+        }
+
+        &.favorite {
+
+            &.favorited,
+            &.favorites:hover {
+                color: $warning;
+            }
+        }
+        &.vote-accepted {
+            color: $green;
+        }
     }
 }
